Added DS_Store to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Trakx.xcworkspace/contents.xcworkspacedata
 Trakx.xcworkspace/xcuserdata/mattcroxson.xcuserdatad/UserInterfaceState.xcuserstate
 Trakx.xcworkspace/xcuserdata/mattcroxson.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 Trakx/APIKeys.plist
+\.DS_Store
